--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Caller Identity</string>
     <string name="api_key" tools:ignore="TypographyDashes">a2i0_--oVzLG9V5kWi_LFcrDqrYFKsYzwka0VoP2vc3ke8eFgB9MT6ysb7NCUpls</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
