--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="reject_unknown_incoming_calls_summary_off">All calls are allowed.</string>
     <string name="reject_unknown_incoming_calls_title">Reject unknown calls</string>
     <string name="settings">Settings</string>
+    <string name="login">Login</string>
 </resources>
