--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="reject_unknown_incoming_calls_title">Reject unknown calls</string>
     <string name="settings">Settings</string>
     <string name="login">Login</string>
+    <string name="search_number">Search number…</string>
 </resources>
