--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="settings">Settings</string>
     <string name="login">Login</string>
     <string name="search_number">Search number…</string>
+    <string name="search_activity_title">Number Lookup</string>
 </resources>
